stuck on habit tile width fixed

--- a/src/css/_base.scss
+++ b/src/css/_base.scss
@@ -56,7 +56,7 @@ html {
   font-family: "Source Sans Pro";
   font-weight: normal;
   font-style: normal;
-  font-size: 14px;
+  font-size: 12px;
   height: 100%;
   &.disable {
     overflow: hidden;
